[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vkflow"
dynamic = ["version"]

description = "Modern async VK bot framework"

readme = "README.md"
license = "MIT"

authors = [
    { name = "Rogue" }
]

keywords = ["vk", "async", "bots", "quick", "flow", "api"]

classifiers = [
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: Russian",
    "Typing :: Typed",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

requires-python = ">=3.11"
dependencies = [
    "pygments>=2.17.0",
    "aiohttp>=3.11.0",
    "cachetools>=7.0.0",
    "loguru>=0.7.0",
    "aiofiles>=25.1.0",
]

[project.optional-dependencies]
autodoc = ["Jinja2>=3.1.0"]
fastapi = ["fastapi>=0.100.0", "uvicorn[standard]>=0.20.0"]
redis = ["redis>=5.0.0"]

speed = ["orjson>=3.10.0", "aiodns>=3.2.0", "Brotli>=1.1.0"]
speedup = ["orjson>=3.10.0", "aiodns>=3.2.0", "Brotli>=1.1.0"]

json-libs = ["orjson>=3.10.0", "ujson>=5.10.0"]

dev = [
    "Jinja2>=3.1.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.5",
    "mypy>=1.11.0",
]

docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs>=1.6.0,<2.0",
    "markdown-include>=0.8.0",
    "mkdocstrings[python]>=1.0.0",
    "pymdown-extensions>=10.9.0",
    "mike>=2.1.0",
]


[project.entry-points."vkflow.addons"]
AutoDoc = "vkflow.addons.autodoc:AutoDoc"
FastAPIAddon = "vkflow.addons.fastapi:FastAPIAddon"


[project.urls]
Homepage = "https://github.com/rogue-meow/vkflow"
Documentation = "https://rogue-meow.github.io/vkflow"
"VK group" = "https://vk.ru/vkflow"


[tool.hatch.build.targets.sdist]
include = ["vkflow/", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["vkflow"]

[tool.hatch.version]
path = "vkflow/__meta__.py"


[tool.ruff]
line-length = 108
target-version = "py311"

src = ["vkflow", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "ASYNC",  # flake8-async
    "T20",    # flake8-print
    "PERF",   # perflint
    "PIE",    # flake8-pie
    "TC",     # flake8-type-checking
    "FLY",    # flynt (static join → f-string)
    "PLE",    # pylint errors
    "PLW",    # pylint warnings
    "RET",    # flake8-return
    "PT",     # flake8-pytest-style
]

ignore = [
    "E501",     # line too long (handled by formatter)
    "RUF001",   # ambiguous unicode (Cyrillic in strings)
    "RUF002",   # ambiguous unicode (Cyrillic in docstrings)
    "RUF003",   # ambiguous unicode (Cyrillic in comments)
    "I001",     # import sorting (formatting)
    "W291",     # trailing whitespace (formatting)
    "W292",     # no newline at EOF (formatting)
    "W293",     # whitespace before ':' (formatting)
    "PLW2901",  # redefined loop/with variable
    "ASYNC109", # timeout parameter in async functions
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports
"examples/*" = ["F401", "F841", "B904", "I001", "T201", "SIM115", "ASYNC230", "N818", "RUF012", "RET503"]  # examples: relaxed rules
"tests/*" = ["PLW0603", "PT011", "PT012", "PT018", "RET504", "E402"]  # tests: relaxed rules
"vkflow/__main__.py" = ["T201"]  # CLI entry point uses print

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
ignore_missing_imports = true
